--- a/opendaylight/md-sal/remoterpc-routingtable/implementation/pom.xml
+++ b/opendaylight/md-sal/remoterpc-routingtable/implementation/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.opendaylight.controller</groupId>
         <artifactId>sal-parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.1-SNAPSHOT</version>
         <relativePath>../..</relativePath>
     </parent>
     <scm>
@@ -16,7 +16,6 @@
     </scm>
 
     <artifactId>remoterpc-routingtable.implementation</artifactId>
-    <version>0.4.1-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
     <build>
@@ -49,7 +48,8 @@
                             org.eclipse.osgi.framework.console,
                             org.osgi.framework,
                             javax.transaction,
-                            com.google.common.base
+                            com.google.common.base,
+                            com.google.common.collect
                         </Import-Package>
                         <Bundle-Activator>
                             org.opendaylight.controller.sal.connector.remoterpc.impl.Activator
@@ -80,13 +80,13 @@
         <dependency>
             <groupId>org.opendaylight.controller</groupId>
             <artifactId>sal-connector-api</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.opendaylight.controller</groupId>
             <artifactId>clustering.services</artifactId>
-            <version>0.5.0-SNAPSHOT</version>
+            <version>${clustering.services.version}</version>
         </dependency>
 
 
