Enabling Remote RPC Router module in ODL distribution.
- Added initial Route Change event
- Updated pom
- Fix rebase conflicts
- Added 02-clustering to initial configuration

Change-Id: I64dc6550171755af52a403f576c086ef2257b4a2
Signed-off-by: Abhishek Kumar <abhishk2@cisco.com>

--- a/opendaylight/distribution/opendaylight/pom.xml
+++ b/opendaylight/distribution/opendaylight/pom.xml
@@ -165,6 +165,18 @@
           <artifactId>restconf-client-impl</artifactId>
         </dependency>
 
+        <!-- clustering -->
+        <dependency>
+          <groupId>org.opendaylight.controller</groupId>
+          <artifactId>remoterpc-routingtable.implementation</artifactId>
+          <version>${mdsal.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.opendaylight.controller</groupId>
+          <artifactId>sal-remoterpc-connector</artifactId>
+          <version>${mdsal.version}</version>
+        </dependency>
+
         <!-- config-->
         <dependency>
           <groupId>org.opendaylight.controller</groupId>
