--- a/opendaylight/md-sal/remoterpc-routingtable/implementation/pom.xml
+++ b/opendaylight/md-sal/remoterpc-routingtable/implementation/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.opendaylight.controller</groupId>
         <artifactId>sal-parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.1-SNAPSHOT</version>
         <relativePath>../..</relativePath>
     </parent>
     <scm>
@@ -49,7 +49,8 @@
                             org.eclipse.osgi.framework.console,
                             org.osgi.framework,
                             javax.transaction,
-                            com.google.common.base
+                            com.google.common.base,
+                            com.google.common.collect
                         </Import-Package>
                         <Bundle-Activator>
                             org.opendaylight.controller.sal.connector.remoterpc.impl.Activator
