Overrode equals and hashcode in RouteIdentifierImpl Updated pom to reflect correct dependency version
Change-Id: Ie88cecec686a5c542f8d3edcc99e895ecbf39c3b
Signed-off-by: Abhishek Kumar <abhishk2@cisco.com>

--- a/opendaylight/md-sal/remoterpc-routingtable/implementation/pom.xml
+++ b/opendaylight/md-sal/remoterpc-routingtable/implementation/pom.xml
@@ -16,7 +16,6 @@
     </scm>
 
     <artifactId>remoterpc-routingtable.implementation</artifactId>
-    <version>0.4.1-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
     <build>
@@ -81,13 +80,13 @@
         <dependency>
             <groupId>org.opendaylight.controller</groupId>
             <artifactId>sal-connector-api</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.opendaylight.controller</groupId>
             <artifactId>clustering.services</artifactId>
-            <version>0.5.0-SNAPSHOT</version>
+            <version>${clustering.services.version}</version>
         </dependency>
 
 
