--- a/opendaylight/config/threadpool-config-impl/pom.xml
+++ b/opendaylight/config/threadpool-config-impl/pom.xml
@@ -71,7 +71,7 @@
                   </Private-Package>
                   <Export-Package>
                       org.opendaylight.controller.config.threadpool.util,
-                      org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.controller.threadpool.impl.rev130405.*,
+                      org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.controller.threadpool.impl.*,
                   </Export-Package>
                </instructions>
             </configuration>
