Resolve Bug:445 Remove freemarker from config code generator.
Change-Id: Idf834620cb7e12e10e7fca1ce8ea0172ca730a3d
Signed-off-by: Tomas Olvecky <tolvecky@cisco.com>

--- a/opendaylight/config/yang-test-plugin/pom.xml
+++ b/opendaylight/config/yang-test-plugin/pom.xml
@@ -22,5 +22,9 @@
             <artifactId>maven-plugin-api</artifactId>
             <version>3.0.5</version>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+        </dependency>
     </dependencies>
 </project>
