--- a/opendaylight/md-sal/pom.xml
+++ b/opendaylight/md-sal/pom.xml
@@ -57,6 +57,7 @@
         <module>statistics-manager</module>
         <module>topology-manager</module>
         <module>forwardingrules-manager</module>
+        <module>blacklists-manager</module>
         <module>topology-lldp-discovery</module>
 
         <!-- Compability Packages -->
