--- a/opendaylight/distribution/opendaylight/pom.xml
+++ b/opendaylight/distribution/opendaylight/pom.xml
@@ -90,6 +90,12 @@
         <dependency>
           <groupId>org.opendaylight.controller</groupId>
           <artifactId>sal-rest-connector</artifactId>
+          <version>${mdsal.version}</version>
+        </dependency>		
+        <dependency>
+          <groupId>org.opendaylight.controller.md</groupId>
+          <artifactId>blacklists-manager</artifactId>
+          <version>${mdsal.version}</version>
         </dependency>
         <dependency>
           <groupId>org.opendaylight.controller.model</groupId>
