Disconnect the switch from controller.
Signed-off-by: P Govinda Rajulu <p.govinda.rajulu@ericsson.com>
Change-Id: I47d77c283ce870f76956560f5090f3ccbb1c8755

--- a/opendaylight/commons/opendaylight/pom.xml
+++ b/opendaylight/commons/opendaylight/pom.xml
@@ -1278,6 +1278,11 @@
         </dependency>
         <dependency>
           <groupId>org.opendaylight.controller.md</groupId>
+          <artifactId>blacklists-manager</artifactId>:
+          <version>${mdsal.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.opendaylight.controller.md</groupId>
           <artifactId>topology-lldp-discovery</artifactId>
           <version>${mdsal.version}</version>
         </dependency>
