Centralize yang-maven-plugin version
There is no reason for individual projects to define the version over
and over again -- let's keep it in one place.

Change-Id: I4ea6ccbc51e31cf3cef3b7c1304ea7dcc02667f7
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/opendaylight/commons/opendaylight/pom.xml
+++ b/opendaylight/commons/opendaylight/pom.xml
@@ -1801,6 +1801,11 @@
           <artifactId>maven-release-plugin</artifactId>
           <version>${releaseplugin.version}</version>
         </plugin>
+        <plugin>
+            <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>yang-maven-plugin</artifactId>
+            <version>${yangtools.version}</version>
+        </plugin>
         <!-- Ignore/Execute plugin execution -->
         <plugin>
           <groupId>org.eclipse.m2e</groupId>
