--- a/opendaylight/netconf/netconf-util/pom.xml
+++ b/opendaylight/netconf/netconf-util/pom.xml
@@ -61,12 +61,14 @@
                     <instructions>
                         <Export-Package>
                             org.opendaylight.controller.netconf.util,
+                            org.opendaylight.controller.netconf.util.exception,
                             org.opendaylight.controller.netconf.util.xml,
                             org.opendaylight.controller.netconf.util.osgi,
                             org.opendaylight.controller.netconf.util.mapping,
                             org.opendaylight.controller.netconf.util.messages,
                             org.opendaylight.controller.netconf.util.handler,
                             org.opendaylight.controller.netconf.util.handler.*,
+
                         </Export-Package>
                         <Import-Package>
                             com.google.common.base,
