BUG-459 Remove deprecated NetconfClient class.
NetconfClient moved to test sources, now will be used only by tests.

Change-Id: Ia98abe3f6fa4f05566b71d57c519c2149726bcb6
Signed-off-by: Maros Marsalek <mmarsale@cisco.com>

--- a/opendaylight/netconf/netconf-impl/pom.xml
+++ b/opendaylight/netconf/netconf-impl/pom.xml
@@ -89,6 +89,13 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>netconf-client</artifactId>
+            <version>${project.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
           <groupId>org.opendaylight.controller</groupId>
           <artifactId>commons.logback_settings</artifactId>
         </dependency>
