Remove deprecated NetconfClient class.
NetconfClient moved to test sources, now will be used only by tests.
Custom NetconfClient created for ConfigPersister.

Change-Id: Ia98abe3f6fa4f05566b71d57c519c2149726bcb6
Signed-off-by: Maros Marsalek <mmarsale@cisco.com>

--- a/opendaylight/netconf/config-persister-impl/pom.xml
+++ b/opendaylight/netconf/config-persister-impl/pom.xml
@@ -109,7 +109,8 @@
                             javax.xml.namespace,
                             javax.xml.xpath,
                             org.opendaylight.controller.config.api,
-                            org.opendaylight.controller.netconf.util
+                            org.opendaylight.controller.netconf.util,
+                            org.opendaylight.protocol.framework,
                         </Import-Package>
                         <Export-Package>
                         </Export-Package>
