Disconnect the switch from the controller.
Signed-off-by: P Govinda Rajulu <p.govinda.rajulu@ericsson.com>
Change-Id: I47d77c283ce870f76956560f5090f3ccbb1c8755

--- a/opendaylight/commons/opendaylight/pom.xml
+++ b/opendaylight/commons/opendaylight/pom.xml
@@ -812,6 +812,11 @@
         <version>${controller.version}</version>
       </dependency>
       <dependency>
+        <groupId>org.opendaylight.controller.md</groupId>
+        <artifactId>disconnect-manager</artifactId>
+        <version>${mdsal.version}</version>
+      </dependency>	  
+      <dependency>
         <groupId>org.opendaylight.controller</groupId>
         <artifactId>clustering.stub</artifactId>
         <version>${clustering.stub.version}</version>
