--- a/opendaylight/md-sal/pom.xml
+++ b/opendaylight/md-sal/pom.xml
@@ -55,6 +55,7 @@
         
         <module>inventory-manager</module>
         <module>statistics-manager</module>
+        <module>disconnect-manager</module>
         <module>topology-manager</module>
         <module>forwardingrules-manager</module>
         <module>topology-lldp-discovery</module>
