--- a/opendaylight/md-sal/test/sal-rest-connector-it/pom.xml
+++ b/opendaylight/md-sal/test/sal-rest-connector-it/pom.xml
@@ -136,7 +136,7 @@
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
-            <version>4.0.10.Final</version>
+	    <version>${netty.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
